adds internal links to case files
closes https://github.com/CDRH/earlywashingtondc/issues/124
replaces previous PR: https://github.com/CDRH/data_oscys/pull/23
this is because the datura reorganization changed the file structure
so easier to copy Karin's XSLT work here than to work on merging

--- a/output/development/html/oscys.case.0092.005.html
+++ b/output/development/html/oscys.case.0092.005.html
@@ -47,7 +47,7 @@ are the children of said Matilda, born after her removal from Maryland as afores
 W. Jones for defts.<br/>
 Augst Taney for Petitioner.</p>
 
-<p class="tei_p"><span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0011 tei_bibl">7 Cr. 298 Queen vs Hepburn</span><br/>
+<p class="tei_p"><a href="oscys.caseid.0011" class="tei_bibl_link">7 Cr. 298 Queen vs Hepburn</a><br/>
 2 W. &amp; M <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_extent_or tei_gap_extent_letter tei_gap_reason_illegible tei_gap">[illegible]</span> 226<br/>
 961</p>
 
@@ -57,7 +57,7 @@ Augst Taney for Petitioner.</p>
 
 <p class="tei_p"><span class="tei_bibl_type_case tei_bibl">Negro Rose vs. Kennedy - M. S. Rep. 1801</span> - <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_reason_illegible tei_gap">[illegible]</span></p>
 
-<p class="tei_p"><span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0042 tei_bibl">Jack Garretson vs Lingan M. S. Ref. 1821</span> - Washn. 166</p>
+<p class="tei_p"><a href="oscys.caseid.0042" class="tei_bibl_link">Jack Garretson vs Lingan M. S. Ref. 1821</a> - Washn. 166</p>
 
 <span class="hr"> </span><span class="pageimage"><a href="https://cdrhmedia.unl.edu/iiif/2/oscys%2Foscys.case.0092.005.005.jpg/full/!1500,1500/0/default.jpg" rel="prettyPhoto[pp_gal]" title="&lt;a href=&#34;https://cdrhmedia.unl.edu/iiif/2/oscys%252Foscys.case.0092.005.005.jpg/full/!1500,1500/0/default.jpg&#34; target=&#34;_blank&#34; &gt;open image in new window&lt;/a&gt;"><img src="https://cdrhmedia.unl.edu/iiif/2/oscys%2Foscys.case.0092.005.005.jpg/full/!150,150/0/default.jpg" class="display "/></a></span>
 
