--- a/output/development/html/oscys.case.0346.004.html
+++ b/output/development/html/oscys.case.0346.004.html
@@ -67,14 +67,14 @@ The Petr was brought here by the Dft her master, last winter to wait upon his fa
 <td class=" tei_td"><span class="tei_bibl_type_case tei_bibl">5. Har. &amp; John 86<br/>
 Baptiste &amp; al</span><br/>
 ?</td>
-<td class=" tei_td"><span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0028 tei_bibl">Henry v. Ball<br/>
-1. Wheaton. 5.</span><br/>
+<td class=" tei_td"><a href="oscys.caseid.0028" class="tei_bibl_link">Henry v. Ball<br/>
+1. Wheaton. 5.</a><br/>
 - temporary residence</td>
 <td class=" tei_td"><span class="tei_bibl_type_case tei_bibl">Gardner<br/> v. Simpson</span><br/>
 Apl. 1823<br/>
 p. 240<br/>
 Redin</td>
-<td class=" tei_td"><span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0050 tei_bibl">Negro William v. Lemuel Sawyer</span> in this Ct.</td>
+<td class=" tei_td"><a href="oscys.caseid.0050" class="tei_bibl_link">Negro William v. Lemuel Sawyer</a> in this Ct.</td>
 </tr>
 <tr class=" tei_tr">
 <td class=" tei_td"><span class="tei_bibl_type_case tei_bibl">Defontaine v Defontaine</span><br/>
