--- a/output/development/html/oscys.case.0435.012.html
+++ b/output/development/html/oscys.case.0435.012.html
@@ -30,7 +30,7 @@ Swann</p>
 
 <p class="tei_p">4. Will of E. Brown, in which she recites having sold to her sister Mrs F. Alexander Milly &amp; her children. That the children are to serve until 31 years of age, &amp; then makes provision for the purchase by her executor of the remainder of their term of service, &amp; for their immediate emancipation, will dated 1825</p>
 
-<p class="tei_p">1. <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0180 tei_bibl">Fenwick vs Tooker Nov. Term 1835</span>. 2. <span class="tei_bibl_type_case tei_bibl">Lee vs Lee 8 Peters</span> 3. <span class="tei_bibl_type_code tei_bibl">Act of Congress 1812</span>. <span class="tei_bibl_type_code tei_bibl">4 Old Va. Rv. Code page 260</span>*</p>
+<p class="tei_p">1. <a href="oscys.caseid.0180" class="tei_bibl_link">Fenwick vs Tooker Nov. Term 1835</a>. 2. <span class="tei_bibl_type_case tei_bibl">Lee vs Lee 8 Peters</span> 3. <span class="tei_bibl_type_code tei_bibl">Act of Congress 1812</span>. <span class="tei_bibl_type_code tei_bibl">4 Old Va. Rv. Code page 260</span>*</p>
 
 <p class="tei_p">Miss Brown lived in Georgetown from which place she removed to Baltimore &amp; resided there in 1807 &amp; early in 1808 or 1809. See Mrs Swann's depn.</p>
 
