--- a/output/development/html/oscys.case.0436.008.html
+++ b/output/development/html/oscys.case.0436.008.html
@@ -27,7 +27,7 @@
 <p class="tei_p">A. Moore<br/>
 Regr Wills</p>
 
-<p class="tei_p">True Copy of the original which I have this day with the permission of the Court withdrawn from the records of the Court in the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0181 tei_bibl">Moses Graham against R. B. Alexander</span> being a suit for his freedom<br/>
+<p class="tei_p">True Copy of the original which I have this day with the permission of the Court withdrawn from the records of the Court in the case of <a href="oscys.caseid.0181" class="tei_bibl_link">Moses Graham against R. B. Alexander</a> being a suit for his freedom<br/>
 J J Dermott<br/>
 29th May 1839</p>
 
