--- a/output/development/html/oscys.report.0006.002.html
+++ b/output/development/html/oscys.report.0006.002.html
@@ -24,7 +24,7 @@
 
 <p class="tei_p">Verdicts are evidence between parties and privies only: and a record proving the ancestor's freedom to have been established in a suit against another party, by whom the petitioner was sold to the present defendant, is inadmissible evidence to prove the petitioner's freedom.</p>
 
-<p class="tei_p"><span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0011 tei_bibl">Mima Queen v. Hepburn, 7 Cr. 290</span>, re-affirmed.</p>
+<p class="tei_p"><a href="oscys.caseid.0011" class="tei_bibl_link">Mima Queen v. Hepburn, 7 Cr. 290</a>, re-affirmed.</p>
 
 </div>
 
