--- a/output/development/html/oscys.report.0032.001.html
+++ b/output/development/html/oscys.report.0032.001.html
@@ -28,7 +28,7 @@ had been the slave of Kirby, offered to prove that her mother and brother and si
 
 <p class="tei_p">Proofs of these circumstances were not allowed by the court below to go to the jury. In this the court was in error.</p>
 
-<p class="tei_p">The recoveries of the mother and sister against George Naylor ought to have been allowed to go to the jury. They were not <em class="tei_term">res inter alios acta</em>. This case distinguished from that of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0251 tei_bibl">Davis v. Wood, 1 Wheaton, 6</span>.</p>
+<p class="tei_p">The recoveries of the mother and sister against George Naylor ought to have been allowed to go to the jury. They were not <em class="tei_term">res inter alios acta</em>. This case distinguished from that of <a href="oscys.caseid.0251" class="tei_bibl_link">Davis v. Wood, 1 Wheaton, 6</a>.</p>
 
 </div>
 
