--- a/output/development/html/oscys.report.0056.001.html
+++ b/output/development/html/oscys.report.0056.001.html
@@ -44,7 +44,7 @@ cipate Clara at the end of the seven years; and Stewart bound himself to Finley 
 
 <p class="tei_p">The Court (Thruston, J., absent,) was of opinion that the law was for the defendant, and that the plaintiff is a slave.</p>
 
-<p class="tei_p">(See the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0475 tei_bibl">Negroes Peter and Lewis v. Cureton and Preuss,(2 Cranch, C. C. 561.)</span></p>
+<p class="tei_p">(See the case of <a href="oscys.caseid.0475" class="tei_bibl_link">Negroes Peter and Lewis v. Cureton and Preuss,(2 Cranch, C. C. 561.)</a></p>
 
 </div>
 
