--- a/output/development/html/oscys.report.0065.001.html
+++ b/output/development/html/oscys.report.0065.001.html
@@ -26,7 +26,7 @@
 
 <p class="tei_p">Petition for freedom. Verdict for the petitioner.</p>
 
-<p class="tei_p">Motion for new trial, on the ground that a sale within three years after importation into the county of Washington does not, per se, give a right to freedom, but is only evidence of importation for sale; and it was agreed that if the Court should be of that opinion, a new trial should be granted; and the counsel referred to the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0050 tei_bibl">Negro William Jordan v. Sawyer, in this Court, in Washington, at April term, 1823, [2 Cranch, C. C. 373,]</span> and <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0371 tei_bibl">Negro Mary v. White, at December term, 1829, [3 Cranch, C. C.]</span></p>
+<p class="tei_p">Motion for new trial, on the ground that a sale within three years after importation into the county of Washington does not, per se, give a right to freedom, but is only evidence of importation for sale; and it was agreed that if the Court should be of that opinion, a new trial should be granted; and the counsel referred to the case of <a href="oscys.caseid.0050" class="tei_bibl_link">Negro William Jordan v. Sawyer, in this Court, in Washington, at April term, 1823, [2 Cranch, C. C. 373,]</a> and <a href="oscys.caseid.0371" class="tei_bibl_link">Negro Mary v. White, at December term, 1829, [3 Cranch, C. C.]</a></p>
 
 <p class="tei_p">The slave was brought into the county of Washington, with the defendant, to reside; but the defendant sold him before the expiration of three years.</p>
 
