--- a/output/development/html/oscys.report.0075.001.html
+++ b/output/development/html/oscys.report.0075.001.html
@@ -44,7 +44,7 @@
 
 ment had been executed in a foreign country under circumstances which ought to give it legal effect here; and quite a different thing to ascertain what is the proper tribunal here, by which those proofs may be examined, for the purpose of pronouncing a judicial sentence thereon."</p>
 
-<p class="tei_p">There must be the same evidence of a will, in cases of freedom as in other cases respecting personal rights. <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0011 tei_bibl">Mima Queen v. Hepburn, 7 Cranch, 290</span>.</p>
+<p class="tei_p">There must be the same evidence of a will, in cases of freedom as in other cases respecting personal rights. <a href="oscys.caseid.0011" class="tei_bibl_link">Mima Queen v. Hepburn, 7 Cranch, 290</a>.</p>
 
 <p class="tei_p">The decree was <em class="tei_term">in rem</em>; upon the will itself; and binds all the world. If the petitioners are not bound by the decree rejecting the will, they could not claim under the will if proved. The rule works both ways.</p>
 
