--- a/output/development/html/oscys.case.0435.006.html
+++ b/output/development/html/oscys.case.0435.006.html
@@ -34,7 +34,7 @@ testimony of competent witnesses that the said Frances Alexander, in her life ti
 
 at the foot thereof, is in these words (insert)</p>
 
-<p class="tei_p">and it is admitted that the servants Milly &amp;c &amp;c mentioned in said inventory &amp; appraisement &amp; in the said note or supplement at the foot thereof, <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_reason_strikethrough tei_gap">[strikethrough]</span> are the same mentioned by those names in thes aid will of Elizabeth Brown, and that the one mentioned in all those papers, by the name of Rachel, is the plff: the plff also produced &amp; read in evidence a deposition given by the deft in the suit of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0181 tei_bibl">Moses Graham v Richd B. Alexander</span>, in these words (insert).</p>
+<p class="tei_p">and it is admitted that the servants Milly &amp;c &amp;c mentioned in said inventory &amp; appraisement &amp; in the said note or supplement at the foot thereof, <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_reason_strikethrough tei_gap">[strikethrough]</span> are the same mentioned by those names in thes aid will of Elizabeth Brown, and that the one mentioned in all those papers, by the name of Rachel, is the plff: the plff also produced &amp; read in evidence a deposition given by the deft in the suit of <a href="oscys.caseid.0181" class="tei_bibl_link">Moses Graham v Richd B. Alexander</a>, in these words (insert).</p>
 
 <p class="tei_p">The deft, on her part, produced &amp; gave in evidence the last will &amp; &amp; testament of the sd Frances Alexander, &amp; the probat thereof, in these words (insert)</p>
 
