--- a/output/development/html/oscys.case.0435.007.html
+++ b/output/development/html/oscys.case.0435.007.html
@@ -20,7 +20,7 @@ Frances Swann</p>
 
 <div class="body">
 
-<p class="tei_p">Admitted: 1st That <del>P</del> Petitioner is the daughter of Milly <del>mentioned in</del> mentioned in Miss Browns will: 2d That the Petitioner is <del>over</del> 31 years of age: 3d That as far as the same are <del>at</del> admissible as legal evidence, the wills filed in <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0181 tei_bibl">Moses' Grahams cause v. Alexander</span> may used in above case: with the certificate, if admissible as evidence, attached to the will of Mrs Alexanders <del>will</del>.</p>
+<p class="tei_p">Admitted: 1st That <del>P</del> Petitioner is the daughter of Milly <del>mentioned in</del> mentioned in Miss Browns will: 2d That the Petitioner is <del>over</del> 31 years of age: 3d That as far as the same are <del>at</del> admissible as legal evidence, the wills filed in <a href="oscys.caseid.0181" class="tei_bibl_link">Moses' Grahams cause v. Alexander</a> may used in above case: with the certificate, if admissible as evidence, attached to the will of Mrs Alexanders <del>will</del>.</p>
 
 <p class="tei_p">Swann &amp; Swann<br/>
 Attys for Deft.</p>
