--- a/output/production/html/oscys.case.0435.002.html
+++ b/output/production/html/oscys.case.0435.002.html
@@ -30,7 +30,7 @@ Frances Swann</p>
 
 <p class="tei_p">4th Will of E. Brown in which she recites having sold to her sister Mrs F. Alexander Milly &amp; her children that her children are to serve until 31 years of age &amp; then makes provision for the purchase by her Executor of the remainder of their term of service &amp; for their immediate emancipation: will dated 1825.</p>
 
-<p class="tei_p">See, <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0180 tei_bibl">Fenwick v. Tooker Nov: Term 1835</span><br/>
+<p class="tei_p">See, <a href="oscys.caseid.0180" class="tei_bibl_link">Fenwick v. Tooker Nov: Term 1835</a><br/>
 " Lee vs Lee do do 28th Peters<br/>
 " <span class="tei_bibl_type_statute tei_bibl">Act of Congress June 1812</span>.<br/>
 " <span class="tei_bibl_type_code tei_bibl">Revised Code of Va old edited page 260</span>.</p>
