--- a/output/production/html/oscys.report.0005.001.html
+++ b/output/production/html/oscys.report.0005.001.html
@@ -28,8 +28,8 @@ pedigree.</p>
 opposite party may read it.</p> 
 
 <p class="tei_p">Particular acts of turpitude cannot be given in evidence to discredit a witness. The question
-is only as to his general character for veracity. But see <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0251 tei_bibl">Wood v. Davis, 7 Cranch, 271</span>; <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0028 tei_bibl">Henry
-v. Ball, 1 Wheat. 1</span>; <span class="tei_bibl_type_case tei_bibl_corresp_oscys.caseid.0251 tei_bibl">Davis v. Wood, 1 Wheat. 6</span>; and <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0011 tei_bibl">Mima Queen v. Hepburn, 7 Cranch, 290</span>.</p>
+is only as to his general character for veracity. But see <a href="oscys.caseid.0251" class="tei_bibl_link">Wood v. Davis, 7 Cranch, 271</a>; <a href="oscys.caseid.0028" class="tei_bibl_link">Henry
+v. Ball, 1 Wheat. 1</a>; <span class="tei_bibl_type_case tei_bibl_corresp_oscys.caseid.0251 tei_bibl">Davis v. Wood, 1 Wheat. 6</span>; and <a href="oscys.caseid.0011" class="tei_bibl_link">Mima Queen v. Hepburn, 7 Cranch, 290</a>.</p>
 
 </div>
 
