--- a/output/production/html/oscys.report.0010.001.html
+++ b/output/production/html/oscys.report.0010.001.html
@@ -44,7 +44,7 @@ That the surplus of the personal estate vests specifically in the executor on wh
 
 <p class="tei_p">The Court (nem. con.) stopped Mr. Key in reply, and refused to instruct the jury that the petitioner was not entitled to freedom under the will.</p>
 
-<p class="tei_p">Verdict for the petitioner, and judgment. Although the title of several other of the slaves depended upon the same will, no writ of error was issued. See the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0468 tei_bibl">Fenwick v. Chapman, 9 Pet. 461</span> accord.</p>
+<p class="tei_p">Verdict for the petitioner, and judgment. Although the title of several other of the slaves depended upon the same will, no writ of error was issued. See the case of <a href="oscys.caseid.0468" class="tei_bibl_link">Fenwick v. Chapman, 9 Pet. 461</a> accord.</p>
 
 </div>
 
