--- a/output/production/html/oscys.report.0015.001.html
+++ b/output/production/html/oscys.report.0015.001.html
@@ -56,7 +56,7 @@
 
 <p class="tei_p">Mr. Key, for the petitioner, then prayed the Court to instruct the jury that if they should be satisfied by the evidence, that Peyton brought the petitioner here from Virginia in March last, and sold him here, he is entitled to freedom.</p>
 
-<p class="tei_p">Mr. Key cited the case of <span class="tei_bibl_type_case tei_bibl">Dunbar v. Ball, in this Court, at October term, 1821, (ante, 261,)</span> in which he contended this point was directly decided by the Court. He cited also the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0344 tei_bibl">Negro Lanna and child v. Pumphry</span>, decided at the last term in this Court, (Cranch, C. J., absent.)</p>
+<p class="tei_p">Mr. Key cited the case of <span class="tei_bibl_type_case tei_bibl">Dunbar v. Ball, in this Court, at October term, 1821, (ante, 261,)</span> in which he contended this point was directly decided by the Court. He cited also the case of <a href="oscys.caseid.0344" class="tei_bibl_link">Negro Lanna and child v. Pumphry</a>, decided at the last term in this Court, (Cranch, C. J., absent.)</p>
 
 <p class="tei_p">Mr. Hay submitted the question without argument.</p>
 
