--- a/output/production/html/oscys.report.0021.001.html
+++ b/output/production/html/oscys.report.0021.001.html
@@ -60,7 +60,7 @@ andria, out of the county of Washington, that in the terms of the said agreement
 
 <p class="tei_p">In all these opinions, except the last, the judges concurred. In the last Judge Thruston did not concur.</p>
 
-<p class="tei_p">Upon the point that the sale within three years entitled the prisoner to freedom, the Court referred to the case of <span class="tei_bibl_type_case tei_bibl">Dunbar v. Ball, at October term, 1821, [2 Cranch, 261,]</span> as conclusive. They also referred to <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0050 tei_bibl">Jordan v. Sawyer, in this court at April term, 1823, [2 Cranch, 373.]</span></p>
+<p class="tei_p">Upon the point that the sale within three years entitled the prisoner to freedom, the Court referred to the case of <span class="tei_bibl_type_case tei_bibl">Dunbar v. Ball, at October term, 1821, [2 Cranch, 261,]</span> as conclusive. They also referred to <a href="oscys.caseid.0050" class="tei_bibl_link">Jordan v. Sawyer, in this court at April term, 1823, [2 Cranch, 373.]</a></p>
 
 <p class="tei_p">Cranch, C. J., was of opinion that if the slave was sold by the importer within the three years, the importer is not protected by the <span class="tei_bibl_type_code tei_bibl">2d section of the Act of 1796, c. 67</span>, from the prohibition contained in the first section.</p>
 
