--- a/output/production/html/oscys.report.0023.001.html
+++ b/output/production/html/oscys.report.0023.001.html
@@ -26,7 +26,7 @@
 
 <p class="tei_p">Petition for freedom. The Court (nem. con.) was of opinion that if the petitioner was not brought into this county for sale or to reside, she is not entitled to freedom under the <span class="tei_bibl_type_code tei_bibl">Maryland Act of 1796, c. 67</span>, and that the act meant a permanent residence, a residence without expectation of change.</p>
 
-<p class="tei_p">See the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0050 tei_bibl">Jordan v. Sawyer, in this Court at April term, 1823, [2 Cranch, 373.]</span></p>
+<p class="tei_p">See the case of <a href="oscys.caseid.0050" class="tei_bibl_link">Jordan v. Sawyer, in this Court at April term, 1823, [2 Cranch, 373.]</a></p>
 
 </div>
 
