--- a/output/production/html/oscys.report.0030.002.html
+++ b/output/production/html/oscys.report.0030.002.html
@@ -46,7 +46,7 @@
 
 such removal, then the jury may infer that the said slaves were imported with intent to sell them; and if so they are entitled to their freedom.</p>
 
-<p class="tei_p">Mr. Jones, in support of his prayer (No. 2,) cited <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0092 tei_bibl">Matilda v. Mason</span>, in this Court, at October term, 1821, (2 Cranch C. C. 343,) and S.C. 12 Wheat. 590, on writ of error; <span class="tei_bibl_type_case tei_bibl">Murray v. McCarthy, 2 Mun. 393</span>; <span class="tei_bibl_type_case tei_bibl">Abraham v Matthew, 6 Mun. 159</span>.</p>
+<p class="tei_p">Mr. Jones, in support of his prayer (No. 2,) cited <a href="oscys.caseid.0092" class="tei_bibl_link">Matilda v. Mason</a>, in this Court, at October term, 1821, (2 Cranch C. C. 343,) and S.C. 12 Wheat. 590, on writ of error; <span class="tei_bibl_type_case tei_bibl">Murray v. McCarthy, 2 Mun. 393</span>; <span class="tei_bibl_type_case tei_bibl">Abraham v Matthew, 6 Mun. 159</span>.</p>
 
 <p class="tei_p">Verdict for the petitioners. Motion for new trial, overruled. No writ of error taken.</p>
 
