--- a/output/production/html/oscys.report.0052.001.html
+++ b/output/production/html/oscys.report.0052.001.html
@@ -42,7 +42,7 @@ afterwards ran away, and her owner sold her "running;" held, that she did not th
 
 <p class="tei_p">The 3d section is an exception to the 2d so as to prevent it from operating in favor of an owner so removing, who shall sell the slave within three years after his removal.</p>
 
-<p class="tei_p">The court said that Thruston, J., stated the law correctly, as it had been decided lately in a case in Alexandria, in which Mr. Taylor was engaged. <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0476 tei_bibl">Negro Harris v. Nelly Alexander, at April term, 1830</span>, [ante, 1.]</p>
+<p class="tei_p">The court said that Thruston, J., stated the law correctly, as it had been decided lately in a case in Alexandria, in which Mr. Taylor was engaged. <a href="oscys.caseid.0476" class="tei_bibl_link">Negro Harris v. Nelly Alexander, at April term, 1830</a>, [ante, 1.]</p>
 
 <p class="tei_p">The Court refused to give the instruction prayed by Mr. Coxe.</p>
 
