--- a/output/production/html/oscys.report.0057.001.html
+++ b/output/production/html/oscys.report.0057.001.html
@@ -26,9 +26,9 @@
 
 <div class="body">
 
-<p class="tei_p">Petition for Freedom. Mr. Key, for the petitioner, contended, that a residence of the slave, in Washington, was evidence of an importation with intent to reside; which gives freedom under the first section of the <span class="tei_bibl_type_code tei_bibl">Maryland Act of 1796, c. 67</span>; and cited the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0094 tei_bibl">Negro William Green v. Jewett, in this Court in May, 1832</span>.</p>
+<p class="tei_p">Petition for Freedom. Mr. Key, for the petitioner, contended, that a residence of the slave, in Washington, was evidence of an importation with intent to reside; which gives freedom under the first section of the <span class="tei_bibl_type_code tei_bibl">Maryland Act of 1796, c. 67</span>; and cited the case of <a href="oscys.caseid.0094" class="tei_bibl_link">Negro William Green v. Jewett, in this Court in May, 1832</a>.</p>
 
-<p class="tei_p">Mr. Bryce and Mr. Jones, <em class="tei_term">contrà</em>. Although the residence was indefinite, it was in its nature temporary. It was intended to continue only until the estate should be settled. The act requires that the intended residence should be permanent. <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0080 tei_bibl">Negro Louisa Johnson v. Milo Mason, in this Court in 1828. [3 Cranch, C. C. 294.]</span></p>
+<p class="tei_p">Mr. Bryce and Mr. Jones, <em class="tei_term">contrà</em>. Although the residence was indefinite, it was in its nature temporary. It was intended to continue only until the estate should be settled. The act requires that the intended residence should be permanent. <a href="oscys.caseid.0080" class="tei_bibl_link">Negro Louisa Johnson v. Milo Mason, in this Court in 1828. [3 Cranch, C. C. 294.]</a></p>
 
 <p class="tei_p">Upon the prayer of Mr. Jones, for the defendant,</p>
 
