--- a/output/production/html/oscys.report.0062.001.html
+++ b/output/production/html/oscys.report.0062.001.html
@@ -42,7 +42,7 @@
 
 <p class="tei_p">This was a petition for freedom under the will of Mrs. Frances Edelin, and the <span class="tei_bibl_type_code tei_bibl">Act of Maryland of 1796, c. 67, § 13</span>.</p>
 
-<p class="tei_p">Mr. Key, for the petitioners, cited two cases decided by this Court, namely, <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0036 tei_bibl">Negro Jo. Thompson v. Clarke, June, 1817, (2 Cranch, C. C. 145,)</span> and <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0334 tei_bibl">Negro Fidelio v. Dermott, June, 1807, (I Cranch, C. C. 405;)</span> <span class="tei_bibl_type_case tei_bibl">Gainsborough v. Gainsborough, 2 Vern. 252; 2 Fonb. 291.</span></p>
+<p class="tei_p">Mr. Key, for the petitioners, cited two cases decided by this Court, namely, <a href="oscys.caseid.0036" class="tei_bibl_link">Negro Jo. Thompson v. Clarke, June, 1817, (2 Cranch, C. C. 145,)</a> and <a href="oscys.caseid.0334" class="tei_bibl_link">Negro Fidelio v. Dermott, June, 1807, (I Cranch, C. C. 405;)</a> <span class="tei_bibl_type_case tei_bibl">Gainsborough v. Gainsborough, 2 Vern. 252; 2 Fonb. 291.</span></p>
 
 <p class="tei_p">Mr. W. L. Brent, for the respondent, cited and relied upon the case of <span class="tei_bibl_type_case tei_bibl">Negro George v. Corse's Administrator, 2 Har. &amp; Gill, 1.</span></p>
 
