--- a/output/production/html/oscys.report.0066.001.html
+++ b/output/production/html/oscys.report.0066.001.html
@@ -32,7 +32,7 @@
 
 <p class="tei_p">Mr. Taylor, <em class="tei_term">contrà</em>. There was no sale in Maryland within the meaning and intent of that act. The slave was not then in Maryland, but in Alexandria.</p>
 
-<p class="tei_p">Mr. Neale, in reply, referred to the case of <span class="tei_bibl_type_case tei_bibl_xml:id_oscys.caseid.0436 tei_bibl">Delilah v. Jacobs in this Court at the last term, (ante, p. 238.)</span></p>
+<p class="tei_p">Mr. Neale, in reply, referred to the case of <a href="oscys.caseid.0436" class="tei_bibl_link">Delilah v. Jacobs in this Court at the last term, (ante, p. 238.)</a></p>
 
 <p class="tei_p">The Court (<em class="tei_term">nem. con.</em>) was of opinion that the slave was lawfully imported into Maryland; and that her escape to Alexandria was not a voluntary importation into Alexandria county; and that the sale in Alexandria, after such escape, was not such a sale as could give the petitioner a right to freedom under the <span class="tei_bibl_type_code tei_bibl">Maryland Act of 1796, c. 67</span>.</p>
 
