add caseid files for some reason

--- a/output/development/html/oscys.case.0406.001.html
+++ b/output/development/html/oscys.case.0406.001.html
@@ -80,7 +80,7 @@ June<br/>
 July<br/>
 Augt<br/>
 Sept<br/>
-October Contd. Rule Nar Dississed <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_reason_illegible tei_gap">[illegible]</span> <span class="unclear illegible tei_unclear_reason_illegible tei_unclear">null[?]</span></p>
+October Contd. Rule Nar Dismissed <span class="tei_gap_extent_one tei_gap_extent_word tei_gap_reason_illegible tei_gap">[illegible]</span> <span class="unclear illegible tei_unclear_reason_illegible tei_unclear">rule[?]</span></p>
 
 <p class="tei_p">Tay</p>
 
