--- a/output/development/html/oscys.caseid.0011.html
+++ b/output/development/html/oscys.caseid.0011.html
@@ -15,7 +15,7 @@
 <h4>Hearsay</h4>
 <p class="tei_p">In some respects, the D.C. Court offered a lenient series of rulings for the plaintiffs. <span class="tei_bibl_type_book tei_bibl">Black's Law Dictionary</span>, 4th ed. defines hearsay evidence as that which does not come from "the personal knowledge of the witness, but from the mere repetition of what he has heard others say." In this case, the Court allowed some hearsay testimony but struck out double hearsay—that is statements that the witness heard someone heard from another person. Although the Court disallowed the seating of a juror who expressed "his detestation of slavery," the Court allowed the testimony of Simon Queen, a free negro, even though the defendant was white. Cranch reported on Priscilla Queen's case his court's ruling regarding hearsay, "The declarations of an ancestor, while held as a slave, cannot be given in evidence. Declarations of deceased persons, that the ancestor was free, may be given in evidence, to show that the ancestor was in fact free, that is, not held in slavery." As a result, a major portion of the Fredus Ryland deposition, the only deposition that contained evidence of Mary Queen's own declarations of her origins, was disallowed. And substantial portions of the depositions of Caleb Clark, Thomas Warfield, and Richard Disney, all favorable to Queen, were omitted. See also <span class="tei_bibl_type_case tei_bibl"><a href="../doc/oscys.caseid.0025" class="internal_link">Priscilla Queen v. Rev. Francis Neale</a></span>.</p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
