--- a/output/development/html/oscys.caseid.0159.html
+++ b/output/development/html/oscys.caseid.0159.html
@@ -4,16 +4,22 @@
 
 <div class="case">
 <div class="narrative">
-<p class="tei_p"/>
+<h3>Summary</h3>
+<p class="tei_p">In September 1833, Joseph Lee filed a petition for freedom against Basil Hatton.  Hatton was summoned to appear in response twelve times between 1833 and 1839, and each time the marshal reported that he was not to be found. Hatton's farm was the Broad Creek area of Prince George's County, but Joseph Lee was living in the District of Columbia on another man's farm. Joseph's wife, Airy, was in Prince George's County, enslaved on the farm of Hatton's neighbor, <a href="../doc/per.000696" class="internal_link">George Kirby</a> (also spelled Kerby).</p> 
+
+<p class="tei_p">Airy escaped Kirby in September 1834 with her daughter, Louisa, and three-month-old son, shortly after Basil Hatton failed to respond to his third summons. Suspecting that she would head for Washington, D.C., to find her husband, Kirby advertised a reward for her capture in the <em class="hi">Daily National Intelligencer</em>. Airy and Joseph may have planned to reunite and then travel north to Pennsylvania, as others who escaped from Kirby had done.  They may also have counted on family and friends to help Airy and the children disappear into the District.  Airy seems to have been a member of the extended Humphreys family, which included a number of formerly enslaved people.  It is possible that the uncle mentioned in Kirby's notice was in a position to help other family members to freedom.</p> 
+ 
+<p class="tei_p">Whether Airy and the children were able to hide or head north, Joseph apparently did not leave Washington. Over the next five years, nine more summons were issued to Hatton, none of them answered. The last was issued in August 1839, a year before Hatton died.  It is not known whether Hatton's death ended the case, or whether Joseph Lee passed away or escaped sometime after the final summons was issued.</p>
+
+<div class="note">This case summary was written and researched by Dianne Lake, a genealogist and researcher, and has been edited by project scholars. Lake is a descendant of the Kirby/Kerby family.</div>
+
+<div class="">
+<h4>Sources</h4>
+
+<p class="tei_p"><em class="hi">Daily National Intelligencer</em>, October 15, 1834.</p>
+
 </div>
-<div class="commentary">
-<p class="tei_p"/>
-</div>
-<div class="outcome">
-<span class="tei_ab_type_decision tei_ab">
-<em class="tei_term"/>
-<span class="tei_bibl"/>
-</span>
+
 </div>
 
 </div>
