--- a/output/development/html/oscys.caseid.0453.html
+++ b/output/development/html/oscys.caseid.0453.html
@@ -4,11 +4,10 @@
 
 <div class="case">
 <div class="narrative">
-<p class="tei_p"/>
+<h3>Summary</h3>
+<p class="tei_p">Rachael Brent claimed that Ariss Buckner moved to D.C. in 1826, took her and the Jacksons into the city in the spring of 1827, registered them as if he were a <em class="tei_term">bona fide</em> resident, and then returned to Loudon County, Virginia. He left Brent and the Jacksons in Washington for more than five years. Then in October 1832, Ariss Buckner took Rachael Brent out of Washington, D.C., back to his farm in Virginia. Sometime later, he then sold her to John Armfield, the notorious slave trader in Alexandria.</p>
 </div>
-<div class="commentary">
-<p class="tei_p"/>
-</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
