--- a/output/development/html/oscys.mb.0013.002.html
+++ b/output/development/html/oscys.mb.0013.002.html
@@ -28,7 +28,7 @@ Caleb Swann</p>
 
 <p class="tei_p">Jury fee paid by Mr. Hiort</p>
    
-<ul class="tei_list_type_simple tei_list"><li>1 James Veitch</li><li>2 Charles King</li><li>3 Alexr. L Joncherez</li><li>4 <span class="unclear ink tei_unclear_reason_ink tei_unclear">Geo N[?]</span> Boothe</li><li>5 David <span class="unclear illegible tei_unclear_reason_illegible tei_unclear">Wharm[?]</span></li><li>6 Griffith <span class="unclear illegible tei_unclear_reason_illegible tei_unclear">Coombs[?]</span></li><li>7 John Hollingshead</li><li>8 Adam Lindsay</li><li>9 Nichs L Queen</li><li>10 George Moore</li><li>11 Ignatius Newton</li><li>12 John Thompson</li></ul>
+<ul class="tei_list_type_simple tei_list"><li>1 James Veitch</li><li>2 Charles King</li><li>3 Alexr. L Joncherez</li><li>4 Jerh Boothe</li><li>5 David <span class="unclear illegible tei_unclear_reason_illegible tei_unclear">Wharm[?]</span></li><li>6 Griffith Coombe</li><li>7 John Hollingshead</li><li>8 Adam Lindsay</li><li>9 Nichs L Queen</li><li>10 George Moore</li><li>11 Ignatius Newton</li><li>12 John Thompson</li></ul>
 
 <div class="tei_list_head">Witnesses for Petrs</div><ul class="tei_list_type_simple tei_list"><li>John Rabbitt</li><li>Rosamond Bentley</li><li><span class="tei_gap_extent_one tei_gap_extent_full tei_gap_extent_name tei_gap_reason_illegible tei_gap">[illegible]</span></li></ul>
 
