--- a/output/development/html/oscys.caseid.0092.html
+++ b/output/development/html/oscys.caseid.0092.html
@@ -19,7 +19,7 @@
 
 (<span class="tei_bibl_type_treatise tei_bibl">A Collection of All Such Acts of the General Assembly of Virginia of a Public &amp; Permanent Nature, as are Now in Force: Comprising the First Volume of the Revised Code</span>, 1812, pp. 261-262.)</p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
