--- a/output/development/html/oscys.caseid.0210.html
+++ b/output/development/html/oscys.caseid.0210.html
@@ -11,7 +11,7 @@
 <h4>Women's Property</h4>
 <p class="tei_p">Much of this case turned on Joseph Wallingsford's claim that Rachel Wallingsford could not have manumitted Sarah Ann Allen because as a married woman, she was unable to hold and convey property without his consent. The Supreme Court held that under equity law, there were numerous exceptions under specific conditions: such as when the property will be applied to the separate use of the wife, where the wife provides a consideration in exchange to the husband for the property, and where the husband makes a gift to "distinctly" separate it from "the mass of his property." The Court decided in this case that a transfer of property did occur, and that it was exchanged for a "valuable consideration," essentially in lieu of alimony. The Court concluded: "In regard to that property, Mrs. Wallingsford is to be considered as a <em class="tei_term">feme sole</em>; and her right to dispose of it followed as a matter of course." In this petition for freedom case, the deciding question became the legal capacity of slaveholding women to control and own enslaved property.</p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
