--- a/output/development/html/oscys.caseid.0337.html
+++ b/output/development/html/oscys.caseid.0337.html
@@ -37,7 +37,7 @@
 <p class="tei_p">It is also possible that Caldwell asked the question speculatively and that Clem Joice never claimed that Ann Joice was a white woman. Regardless, whether in Prince George's County Court, the General Court of the Western Shore in Annapolis, or the Circuit Court for the District of Columbia, the Mahoney and Joice family consistently claimed that Ann Joice was a free person, a claim they asserted in the legal record for over twenty years and at least three generations.
 </p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
