--- a/output/development/html/oscys.caseid.0466.html
+++ b/output/development/html/oscys.caseid.0466.html
@@ -9,6 +9,7 @@
 
 <p class="tei_p">Buckner brought Esther and her children into Washington just days after the one-year window expired. He tried to claim that their importation fell within the year because he was moving furniture for weeks and claimed he intended to reside permanently throughout the move. But the jury enforced the law to the letter. Esther and her two children were immediately free.</p>
 </div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
