--- a/output/development/html/oscys.caseid.0484.html
+++ b/output/development/html/oscys.caseid.0484.html
@@ -7,6 +7,7 @@
 <h3>Summary</h3>
 <p class="tei_p">In 1816, a select committee chaired by Virginia Congressman John Randolph was appointed in the House of Representatives to investigate the reports of the interstate slave trade in the nation's capital. Some of the testimony brought forth to the committee involve kidnapped or enslaved individuals who feature in petition for freedom cases heard before the Circuit Court for the District of Columbia.</p>
 </div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
