html files needing to be committed for some reason

--- a/output/production/html/oscys.caseid.0001.html
+++ b/output/production/html/oscys.caseid.0001.html
@@ -11,7 +11,7 @@
 <h4>Bonds</h4>
 <p class="tei_p">A <em class="tei_term">supersedeas</em> is a defendant's appeal bond that a court requires from an appellant who wants to delay the payment of a judgment until the appeal is complete. William Blackstone, in <span class="tei_bibl_type_treatise tei_bibl">Commentaries Vol. 3</span>, notes that "before granting any appeal, writ of error, or <em class="tei_term">supersedeas</em>, the appellant must enter into bond with security to pay the amount of the debt, and all costs and damages . . . in case the judgment be affirmed." (409) In this case, Sabret Scott and George W. Riggs put up the <a href="../doc/oscys.case.0001.015" class="internal_link">surety bond</a> of $1,000 paid to Ben. Sabret Scott signed the bond with an "x" indicating that despite his business ties and slaveholding he was illiterate.</p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
