--- a/output/production/html/oscys.caseid.0600.html
+++ b/output/production/html/oscys.caseid.0600.html
@@ -18,6 +18,7 @@
 <p class="tei_p">Thirty-five-years-old, Mary Butler was free and in subsequent freedom suits, took the stand as a witness to document the family's genealogy and claim to freedom.</p>
 
 </div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
