--- a/output/production/html/oscys.caseid.0006.html
+++ b/output/production/html/oscys.caseid.0006.html
@@ -7,7 +7,7 @@
 <h3>Summary</h3>
 <p class="tei_p">Philis Butler <a href="../doc/oscys.case.0006.001" class="internal_link">claimed</a> she was "manumitted &amp; set free" by Philip Selby. The terms of her manumission, however, were complicated because Augustin Saira paid Selby for Butler's freedom. As a result, Butler owed Saira. Under the terms of their arrangement, Butler argued, she could either pay Saira the equivalent money or work for him for a "certain length of time." Saira, however, used the opportunity to claim Butler as a slave, in effect taking the position that he purchased Butler rather than lent her funds in order to secure her freedom.</p>
 </div>
-<div class="note">This case summary has been written and edited by project scholars.</div>
+<div class="note">This case summary was written and researched by William G. Thomas III, and edited by project scholars.</div>
 
 </div>
 
