--- a/output/production/html/oscys.caseid.0098.html
+++ b/output/production/html/oscys.caseid.0098.html
@@ -4,16 +4,31 @@
 
 <div class="case">
 <div class="narrative">
-<p class="tei_p"/>
+<h3>Summary</h3>
+
+<p class="tei_p">In May 1831, Adam Wigle filed a petition for freedom against Thomas Grimes, who had purchased him from a neighbor, Henry Thorn, in February 1830. Adam did not state on what grounds Grimes should free him, but it was not his first bid for freedom through the legal system.</p>  
+
+<p class="tei_p">Henry Thorn's father had purchased Adam from the estate of <a href="../doc/per.000689" class="internal_link">John Baptist Kirby</a> (also spelled Kerby) in 1829. Before that sale, Adam had been one of six plaintiffs in <a href="../doc/oscys.caseid.0089" class="internal_link">a freedom suit</a> against Kirby's executor, <a href="../doc/per.000696" class="internal_link">George Kirby</a>, arguing that Kirby's will freed them at his death. The court ruled that those over the age of 45 were not eligible for manumission, and Adam, 60, along with his wife, <a href="../doc/per.000695" class="internal_link">Rachel</a>, also 60, were then sold, Rachel to Thomas Grimes. In February 1830, Grimes paid Thorn one dollar for Adam, perhaps in an effort to reunite husband and wife.  Whatever that gesture meant to Adam, he resumed his legal fight the following year.</p>
+
+<p class="tei_p">Then, on June 7, 1831, a bill of complaint was filed against both Thomas Grimes and George Kirby by Jesse and Sarah Duval. It argued that Adam Wigle was entitled to his freedom not because of Kirby's will, but because years earlier, he had been provisionally freed by a previous owner, Joseph P. Elson. Elson, they said, had become a Quaker and manumitted his slaves except for Adam, who had been given to John B. Kirby to settle a debt, but only for a period of six years. The real issue, they argued, was Kirby's failure to free Adam Wigle at the end of that term. Had he done so, Adam would have already been a free man at the time of Kirby's death. They also claimed to be Elson's heirs, and therefore entitled to compensation for Adam's labor should it turn out that Elson had not intended to manumit him. This new complaint seemed to have superseded the original petition against Thomas Grimes.</p>
+
+<p class="tei_p">In early October 1831, Grimes and Kirby responded. Grimes claimed ignorance of anything that had happened before he purchased Adam from Thorn. Kirby was suffering an attack of bilious fever, but was well enough to vigorously dispute the Duvals' claim in a statement to his solicitor. He countered that no such arrangement for Adam's freedom had ever existed, that Joseph Elson never became a Quaker, and that Elson "held and dealt in property of such nature [slaves] until a short time before his decease" in 1824. He also said that his uncle, not the Duvals, had been Elson's heir. Although Kirby no longer had any claim to Adam Wigle as property, and Thomas Grimes had spent an insignificant sum to acquire him, neither seemed inclined to allow the Duvals' story to stand unchallenged.</p>
+
+<p class="tei_p">No record of the verdict, or Adam and Rachel Wigle's fates, has been found.</p>
+
+<div class="note">This case summary was written and researched by Dianne Lake, a genealogist and researcher, and has been edited by project scholars. Lake is a descendant of the Kirby/Kerby family.</div>
+
+<div class="">
+<h4>Sources</h4>
+
+<p class="tei_p">Thomas Grimes' Daybook, 1828-1833, Grimes Family Papers, Special Collections, University of Maryland Libraries, https://hdl.handle.net/1903.1/39280.</p>
+
+<p class="tei_p">George Kirby to Thomas Grimes, October 4, 1831, Grimes Family Legal Documents, Maryland, 1831-1851, Grimes Family Papers, Special Collections, University of Maryland Libraries,  https://hdl.handle.net/1903.1/39058.</p>
+
+<p class="tei_p"><em class="hi">Jesse Duval and Sarah P. Duval v. Thomas Grimes and George Kirby</em>, National Archives and Records Administration, Record Group 21, Entry 20, Chancery Court Dockets and Rules Case Files, Folder 162</p>
+
 </div>
-<div class="commentary">
-<p class="tei_p"/>
-</div>
-<div class="outcome">
-<span class="tei_ab_type_decision tei_ab">
-<em class="tei_term"/>
-<span class="tei_bibl"/>
-</span>
+
 </div>
 
 </div>
